Add Group 38 files.

--- a/content/posters/2024/Q4/Group 38/students/Franciszek Latała/student_info.yaml
+++ b/content/posters/2024/Q4/Group 38/students/Franciszek Latała/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Analysing Hand Gestures in Real-World Interactions
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:651333f5-20f6-437e-97fb-8875c31fda8e'
 firstName: Franciszek
 lastName: Latała
 repositoryUrl: 'https://github.com/flatala/cse3000-research-project.github.io'
