--- a/content/posters/2024/Q4/Group 38/students/Irene Aldabaldetrecu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 38/students/Irene Aldabaldetrecu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Deciphering the Meaning of Gestures In the Wild
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:6a3b4722-38cf-43a4-a034-6993e4d0d847'
 firstName: Irene
 lastName: Aldabaldetrecu
 repositoryUrl: ''
