--- a/content/posters/2024/Q4/Group 35/students/Mana Mahmoudi/student_info.yaml
+++ b/content/posters/2024/Q4/Group 35/students/Mana Mahmoudi/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A Survey of Interrater Agreement in Datasets for Facial Automatic Affect Prediction
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Af7359b43-0b77-47f4-ba63-fe8da3245f22?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:f7359b43-0b77-47f4-ba63-fe8da3245f22'
 firstName: Mana
 lastName: Mahmoudi
 repositoryUrl: ''
