--- a/content/posters/2024/Q4/Group 35/students/Oscar Wezenaar/student_info.yaml
+++ b/content/posters/2024/Q4/Group 35/students/Oscar Wezenaar/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Survey of Interrater Agreement in Automatic Affect Prediction for Speech Emotion Recognition
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Aea9f7550-ad8e-4ecb-a2c5-bb680b89ea30?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:ea9f7550-ad8e-4ecb-a2c5-bb680b89ea30'
 firstName: Oscar
 lastName: Wezenaar
 repositoryUrl: ''
