Add Group 2 papers updated links

--- a/content/posters/2024/Q4/Group 2/students/Mirella Günther/student_info.yaml
+++ b/content/posters/2024/Q4/Group 2/students/Mirella Günther/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Improving State-of-the-Art ASR Systems for Speakers with Dysarthria
-paperUrl: 'http://resolver.tudelft.nl/uuid:9e54041d-1ecf-42ea-823c-203a0dd0b3b1'
+paperUrl: 'https://repository.tudelft.nl/record/uuid:9e54041d-1ecf-42ea-823c-203a0dd0b3b1'
 firstName: Mirella
 lastName: Günther
 repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Zhang_Yue/mirellagunther-Exploring-state-of-the-art-speech-recognisers-for'
