--- a/content/posters/2024/Q4/Group 2/students/Orhan Agaoglu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 2/students/Orhan Agaoglu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: How Does OpenAI's Whisper Interpret Dysarthric Speech?
-paperUrl: 'http://resolver.tudelft.nl/uuid:47837feb-1b2e-4bba-9fad-f92d84024abb'
+paperUrl: 'https://repository.tudelft.nl/record/uuid:47837feb-1b2e-4bba-9fad-f92d84024abb'
 firstName: Orhan
 lastName: Agaoglu
 repositoryUrl: 'https://github.com/Oagaoglu/Probing-Whisper-for-Dysarthic-Speech'
