Add Group 54 files (#301)
Add Group 54 files

--- a/content/posters/2024/Q4/Group 54/students/Bora Mete/student_info.yaml
+++ b/content/posters/2024/Q4/Group 54/students/Bora Mete/student_info.yaml
@@ -1,4 +1,7 @@
 thesisTitle: 'Procedural content generation in education: Orchestration of content using PCG'
-paperUrl: 'http://resolver.tudelft.nl/uuid:5f0e0ef3-bd04-4568-a830-d0f17e5fe048'
+quarter: 4
+groupNumber: 54
 firstName: Bora Tolgay
 lastName: Mete
+paperUrl: 'http://resolver.tudelft.nl/uuid:5f0e0ef3-bd04-4568-a830-d0f17e5fe048'
+repositoryUrl: ''
