--- a/content/posters/2024/Q4/Group 54/students/Lena Grossmann/student_info.yaml
+++ b/content/posters/2024/Q4/Group 54/students/Lena Grossmann/student_info.yaml
@@ -1,4 +1,7 @@
-thesisTitle: A literature review on the educational use of Procedural Content Generation across disciplines
-paperUrl: 'http://resolver.tudelft.nl/uuid:6a1c5bb7-2d19-4dba-89fb-f9ab134a877c'
+thesisTitle: 'Literature Review on the Educational Use of Procedural Content Generation Across Disciplines'
+quarter: 4
+groupNumber: 54
 firstName: Lena
 lastName: Grossmann
+paperUrl: 'http://resolver.tudelft.nl/uuid:6a1c5bb7-2d19-4dba-89fb-f9ab134a877c'
+repositoryUrl: ''
