add group 71 paper links

--- a/content/posters/2024/Q4/Group 71/students/Alexandru-Sebastian Nechita/student_info.yaml
+++ b/content/posters/2024/Q4/Group 71/students/Alexandru-Sebastian Nechita/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: 'Enhancing Understanding in Receiver Operating Characteristic (ROC) Curve Analysis: An Investigation into the Impact of Interactive Teaching Methods'
-paperUrl: ' '
+thesisTitle: "Enhancing Understanding in Receiver Operating Characteristic (ROC) Curve Analysis: An Investigation into the Impact of Interactive Teaching Methods"
+paperUrl: "https://repository.tudelft.nl/record/uuid:751e0948-e3cd-4166-bd50-e1976d3fea7f"
 firstName: Alexandru-Sebastian
 lastName: Nechita
-repositoryUrl: ' '
+repositoryUrl: " "
