--- a/content/posters/2024/Q4/Group 71/students/Mihnea Liute/student_info.yaml
+++ b/content/posters/2024/Q4/Group 71/students/Mihnea Liute/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Scaffolded Learning Assignments in university Machine Learning education
-paperUrl: ' '
+paperUrl: "https://repository.tudelft.nl/record/uuid:10a8f822-c3f5-4694-9e26-0e88f26ffbfd"
 firstName: Mihnea
 lastName: Liute
-repositoryUrl: ' '
+repositoryUrl: " "
