Update Group 56 files.

--- a/content/posters/2024/Q4/Group 56/students/Wout Burgers/student_info.yaml
+++ b/content/posters/2024/Q4/Group 56/students/Wout Burgers/student_info.yaml
@@ -1,6 +1,6 @@
 thesisTitle: |-
 Types of Knowledge Elicited from Games With A Purpose Using Large Language Models
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:f2fd49e2-17c3-4ec2-8202-2a9b922b97c6'
 firstName: Wout
 lastName: Burgers
 repositoryUrl: ''
