--- a/content/posters/2024/Q4/Group 56/students/Maciej Lichocki/student_info.yaml
+++ b/content/posters/2024/Q4/Group 56/students/Maciej Lichocki/student_info.yaml
@@ -1,6 +1,6 @@
 thesisTitle: |-
   Game design paradigms for knowledge elicitation using LLMs
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:d2becd3c-2e41-4c9a-bf99-40fe2c0911b7'
 firstName: Maciej
 lastName: Lichocki
 repositoryUrl: ''
