--- a/content/posters/2024/Q4/Group 56/students/Tommy Hu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 56/students/Tommy Hu/student_info.yaml
@@ -1,7 +1,7 @@
 thesisTitle: |-
   Leveraging large language models in games with a
   purpose for enhanced knowledge elicitation
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:71bdadef-b854-4094-9bd7-14a8456d9e0a'
 firstName: Tommy
 lastName: Hu
 repositoryUrl: ''
