Add Group 13 files.

--- a/content/posters/2024/Q4/Group 13/students/Burak Tezcan/student_info.yaml
+++ b/content/posters/2024/Q4/Group 13/students/Burak Tezcan/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle:  Investigation of Different Visualization Techniques for the Multi-Objective Reinforcement Learning Results
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:9ce1a280-da58-4c6b-844d-e6ee46d31232'
 firstName: Burak
 lastName: Tezcan
 repositoryUrl: ''
