--- a/content/posters/2024/Q4/Group 13/students/Jorian Faber/student_info.yaml
+++ b/content/posters/2024/Q4/Group 13/students/Jorian Faber/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle:  Bottom-up Formulation of Water Management Systems as a Reinforcement Learning Problem
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:76141be4-de3a-4da7-b4cc-f2101b96740b'
 firstName: Jorian 
 lastName: Faber
 repositoryUrl: ''
