--- a/content/posters/2024/Q4/Group 13/students/Krzysztof Muniak/student_info.yaml
+++ b/content/posters/2024/Q4/Group 13/students/Krzysztof Muniak/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle:  'RL4Water: Reinforcement Learning environment for Water Management'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:918ae205-4332-419b-8cff-7f351f0906b1'
 firstName: Krzysztof 
 lastName: Muniak
 repositoryUrl: ''
