--- a/content/posters/2024/Q4/Group 13/students/Jakub Kontak/student_info.yaml
+++ b/content/posters/2024/Q4/Group 13/students/Jakub Kontak/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle:  Measuring the Performance of Multi-Objective Reinforcement Learning algorithms - Nile River Case Study
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:fde67c6d-c57b-407d-8fe9-7ee093fb614a'
 firstName: Jakub
 lastName: Kontak
 repositoryUrl: ''
