fix paper title

--- a/content/posters/2024/Q4/Group 71/students/Mihnea Liute/student_info.yaml
+++ b/content/posters/2024/Q4/Group 71/students/Mihnea Liute/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Scaffolded Learning Assignments in university Machine Learning education
+thesisTitle: How to Teach Machine Learning in an Engaging Way
 paperUrl: "https://repository.tudelft.nl/record/uuid:10a8f822-c3f5-4694-9e26-0e88f26ffbfd"
 firstName: Mihnea
 lastName: Liute
