Add Group 21 files - now with paperURL

--- a/content/posters/2024/Q4/Group 21/students/Khalit Gulamov/student_info.yaml
+++ b/content/posters/2024/Q4/Group 21/students/Khalit Gulamov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Exploring Speed/Quality Trade-offs in Dimensionality of Attention Mechanism'
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://repository.tudelft.nl/record/uuid:91494876-0d09-4542-98de-5b07b9aeb7c6'
 firstName: Khalit
 lastName: Gulamov
 repositoryUrl: 'https://github.com/AISE-TUDelft/tiny-transformers/tree/main/code/khalit_attention_QKV/'
