--- a/content/posters/2024/Q4/Group 21/students/Yijun Wu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 21/students/Yijun Wu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Sparse Transformers are (in)Efficient Learners: Comparing Sparse Feedforward Layers in Small Transformers'
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://repository.tudelft.nl/record/uuid:7ac10cac-28f7-416d-9017-17a0b04d80e8'
 firstName: Yijun
 lastName: Wu
 repositoryUrl: 'https://github.com/AISE-TUDelft/tiny-transformers/tree/main/code/eugene/'
