--- a/content/posters/2024/Q4/Group 78/students/Duco de Bruin/student_info.yaml
+++ b/content/posters/2024/Q4/Group 78/students/Duco de Bruin/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'System Call Sandboxing: Enhancing Security Through Analysis: Comparing Dynamic and Static System Call Analysis for Diff and SSH'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:2f99129e-a5d1-4579-8ea0-296a9b6c8188'
 firstName: Duco
 lastName: de Bruin
 repositoryUrl: 'https://github.com/DucodB/sparse'
