Updated URL for D.Lihotsky

--- a/content/posters/2024/Q4/Group 6/students/Daniel Lihotský/student_info.yaml
+++ b/content/posters/2024/Q4/Group 6/students/Daniel Lihotský/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Visualizing HWFC-generated music and "locking in" parts of the output for later reiteration'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:cfdd2325-bdf0-4a74-834f-90f55548ef10'
 firstName: Daniel
 lastName: Lihotský
 repositoryUrl: 'https://github.com/ppvarga/hwfc-music-pcg'
