--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,23 +2,28 @@ name: Gatsby Deploy
 
 on:
   push:
-    branches: master
+    branches: compress
 
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
-  build:
+  compress:
     runs-on: ubuntu-latest
-    steps:
-      - name: GitHub Config
-        run: |
-          git config --global user.email "rp-cs-ewi@tudelft.nl"
-          git config --global user.name "CSE3000-research-project"
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install dependencies
-        run: |
-          npm install
-      - name: Deploy
-        run: npm run deploy:ci
+    steps: 
+      - name: Compress
+        run: npm run compress
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: GitHub Config
+  #       run: |
+  #         git config --global user.email "rp-cs-ewi@tudelft.nl"
+  #         git config --global user.name "CSE3000-research-project"
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - name: Install dependencies
+  #       run: |
+  #         npm install
+  #     - name: Deploy
+  #       run: npm run deploy:ci
