--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,15 @@ jobs:
   compress:
     runs-on: ubuntu-latest
     steps: 
+      - name: GitHub Config
+        run: |
+          git config --global user.email "rp-cs-ewi@tudelft.nl"
+          git config --global user.name "CSE3000-research-project"
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          npm install
       - name: Compress
         run: npm run compress
   # build:
