--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,9 @@ jobs:
         run: |
           npm install
       - name: Compress
-        run: npm run compress
+        run: |
+          pip3 install pillow
+          npm run compress
   # build:
   #   runs-on: ubuntu-latest
   #   steps:
