--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Gatsby Deploy
 
 on:
   push:
-    branches: compress
+    branches: master
 
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -24,17 +24,5 @@ jobs:
         run: |
           pip3 install pillow
           npm run compress
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: GitHub Config
-  #       run: |
-  #         git config --global user.email "rp-cs-ewi@tudelft.nl"
-  #         git config --global user.name "CSE3000-research-project"
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Install dependencies
-  #       run: |
-  #         npm install
-  #     - name: Deploy
-  #       run: npm run deploy:ci
+      - name: Deploy
+        run: npm run deploy:ci
