--- a/content/posters/2025/Q2/Group 7/students/Javina Ye/student_info.yaml
+++ b/content/posters/2025/Q2/Group 7/students/Javina Ye/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Exploring Genre Preferences and Audience Engagement in Multilingual
+thesisTitle: Exploring Genre Preferences and Audience Engagement in Multilingual Fanfictions
 paperUrl: 'https://resolver.tudelft.nl/uuid:eca84883-4cbc-4114-a4cd-558974a012ce'
 firstName: Javina
 lastName: Ye
