--- a/content/posters/2025/Q2/Group 3/students/Markas Aisparas/student_info.yaml
+++ b/content/posters/2025/Q2/Group 3/students/Markas Aisparas/student_info.yaml
@@ -1,4 +1,5 @@
 firstName: Markas
 lastName: Aisparas
 paperUrl: https://resolver.tudelft.nl/uuid:40dc8e5e-743c-435e-b83c-02d478658384
+repositoryUrl: https://github.com/MarkasAis/pumpkin
 thesisTitle: Explanation-Based Propagators for the Table Constraint
