--- a/content/posters/2025/Q2/Group 12/group_info.yaml
+++ b/content/posters/2025/Q2/Group 12/group_info.yaml
@@ -1,4 +1,4 @@
-projectTitle: "How Much Data is Enough?" Learning Curves for Machine Learning
+projectTitle: How Much Data is Enough? Learning Curves for Machine Learning
 year: 2025
 supervisors:
   - Taylan Turan
