Update Group 35 files.

--- a/content/posters/2025/Q4/Group 35/students/Iulia-Maria Aldea/student_info.yaml
+++ b/content/posters/2025/Q4/Group 35/students/Iulia-Maria Aldea/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Understanding Software Failures Through Incident Report Analysis
-paperUrl: ''
+paperUrl: ""
 firstName: Iulia-Maria
 lastName: Aldea
-repositoryUrl: 'https://zenodo.org/records/15712312'
+repositoryUrl: ""
