--- a/content/posters/2025/Q4/Group 35/students/Jakub Rutkowski/student_info.yaml
+++ b/content/posters/2025/Q4/Group 35/students/Jakub Rutkowski/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: "Understanding IT System Failures: Primary Fault Types, Severity Pa
 paperUrl: ""
 firstName: Jakub
 lastName: Rutkowski
-repositoryUrl: "https://doi.org/10.5281/zenodo.15675301"
+repositoryUrl: ""
