Update Group 29 files

--- a/content/posters/2025/Q4/Group 29/students/Stefan Minkov/student_info.yaml
+++ b/content/posters/2025/Q4/Group 29/students/Stefan Minkov/student_info.yaml
@@ -1,6 +1,4 @@
-thesisTitle: |-
-  Data Hound: Analyzing Boilerplate Code Data Smell on Large
-  Code Datasets
+thesisTitle: 'Data Hound: Analyzing Boilerplate Code Data Smell on Large Code Datasets'
 paperUrl: ''
 firstName: Stefan
 lastName: Minkov
