--- a/content/posters/2025/Q4/Group 29/students/Lucas Witte/student_info.yaml
+++ b/content/posters/2025/Q4/Group 29/students/Lucas Witte/student_info.yaml
@@ -1,6 +1,4 @@
-thesisTitle: |-
-  Analyzing the Impact of Self-Admitted Technical Debt on the Code Completion
-  Performance of Large Language Models
+thesisTitle: 'Analyzing the Impact of Self-Admitted Technical Debt on the Code Completion Performance of Large Language Models'
 paperUrl: ''
 firstName: Lucas
 lastName: Witte
