Change student thesis title

--- a/content/posters/2025/Q4/Group 27/students/Christiaan Baraya/student_info.yaml
+++ b/content/posters/2025/Q4/Group 27/students/Christiaan Baraya/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Making a tool to unravel Starlinks network routing
+thesisTitle: The Influence of Ground Infrastructure Proximity on Starlinks Performance: A Novel Method to Unravel Starlinks Network Routing
 paperUrl: ''
 firstName: Christiaan
 lastName: Baraya
