Update Group 3 files.

--- a/content/posters/2025/Q4/Group 3/students/Konstantin Kamenov/student_info.yaml
+++ b/content/posters/2025/Q4/Group 3/students/Konstantin Kamenov/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: Propagators for Constraint Programming
-paperUrl: ''
+thesisTitle: Propagators for Constraint Programming Energetic Reasoning
+paperUrl: 'https://repository.tudelft.nl/record/uuid:fb69c8ae-0ef0-4348-8bff-257539360703'
 firstName: Konstantin
 lastName: Kamenov
 repositoryUrl: 'https://github.com/KonstantinKamenov/Pumpkin'
