--- a/content/posters/2025/Q4/Group 3/students/Matthias van Vliet/student_info.yaml
+++ b/content/posters/2025/Q4/Group 3/students/Matthias van Vliet/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Propagators for Constraint Programming
+thesisTitle: Explaining detectable precedences for the disjunctive constraint
 paperUrl: ''
 firstName: Matthias
 lastName: van Vliet
