--- a/content/posters/2025/Q4/Group 3/students/Yousef El Bakri/student_info.yaml
+++ b/content/posters/2025/Q4/Group 3/students/Yousef El Bakri/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Propagators for Constraint Programming
+thesisTitle: More general explanations for the Not-First/Not-Last propagators
 paperUrl: ''
 firstName: Yousef
 lastName: El Bakri
