--- a/content/posters/2025/Q4/Group 3/students/Radu Andrei Vasile/student_info.yaml
+++ b/content/posters/2025/Q4/Group 3/students/Radu Andrei Vasile/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: Propagators for Constraint Programming
-paperUrl: ''
+thesisTitle: Evaluating the Impact of Explanations on the Performance of an Edge-Finding Propagator
+paperUrl: 'https://repository.tudelft.nl/record/uuid:afbf9ce9-9a66-44a3-b995-c2b7b4c7de85'
 firstName: Radu Andrei
 lastName: Vasile
 repositoryUrl: 'https://github.com/Bradul/Pumpkin/tree/feat/scheduling-project'
