--- a/content/posters/2025/Q4/Group 72/students/Andrei Chiru/student_info.yaml
+++ b/content/posters/2025/Q4/Group 72/students/Andrei Chiru/student_info.yaml
@@ -1,7 +1,6 @@
-thesisTitle: |-
-  How Robust Is Neural-Symbolic Model Logic Tensor Networks Against
+thesisTitle: How Robust Is Neural-Symbolic Model Logic Tensor Networks Against
   Clean-Label Data Poisoning Backdoor Attacks?
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:46cbc127-bc57-41fb-af0a-562a4fcac9d9'
 firstName: Andrei
 lastName: Chiru
 repositoryUrl: ' https://github.com/Andrei-Chiru/RP'
