Update Group 31 files.

--- a/content/posters/2025/Q4/Group 31/students/Sagar Chethan Kumar/student_info.yaml
+++ b/content/posters/2025/Q4/Group 31/students/Sagar Chethan Kumar/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: 'Talking Like a Human: How Conversational Anthropomorphism Affects 
 paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
 firstName: Sagar
 lastName: Chethan Kumar
-repositoryUrl: 'https://github.com/Sagar-CK/mhealth-chatbot'
+repositoryUrl: ''
