Update Group 26 files

--- a/content/posters/2025/Q4/Group 26/students/Serban Ungureanu/student_info.yaml
+++ b/content/posters/2025/Q4/Group 26/students/Serban Ungureanu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: The impact of branching and merging strategies on KPIs in open-source software
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:3a13199d-c928-43c9-a891-e23601436a1a'
 firstName: Serban
 lastName: Ungureanu
 repositoryUrl: ''
