Rectify resolver paper URLs in group 10.

--- a/content/posters/2025/Q4/Group 10/students/Bozhidar Kostov/student_info.yaml
+++ b/content/posters/2025/Q4/Group 10/students/Bozhidar Kostov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: The Impact of Imbalanced Training Data on Learning Curve Prior-Fitted Networks
-paperUrl: 'https://repository.tudelft.nl/record/uuid:ff8d2c84-0548-4071-9110-9fdd5e1f0227'
+paperUrl: 'https://resolver.tudelft.nl/uuid:ff8d2c84-0548-4071-9110-9fdd5e1f0227'
 firstName: Bozhidar
 lastName: Kostov
 repositoryUrl: ''
