--- a/content/posters/2025/Q4/Group 10/students/Max Soeters/student_info.yaml
+++ b/content/posters/2025/Q4/Group 10/students/Max Soeters/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: The Effect of Domain Shift on Learning Curve Extrapolation
-paperUrl: 'https://repository.tudelft.nl/record/uuid:f7e6676f-e211-4ea3-9496-cc6c98740150'
+paperUrl: 'https://resolver.tudelft.nl/uuid:f7e6676f-e211-4ea3-9496-cc6c98740150'
 firstName: Max
 lastName: Soeters
 repositoryUrl: 'https://github.com/Maxmwoan/Research-Project'
