--- a/content/posters/2025/Q4/Group 10/students/Razvan Marian Gherasa/student_info.yaml
+++ b/content/posters/2025/Q4/Group 10/students/Razvan Marian Gherasa/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: How Noisy Is Too Noisy? Robust Extrapolation of Learning Curves with LC-PFN
-paperUrl: 'https://repository.tudelft.nl/record/uuid:c8fbadda-4938-4022-a153-b95c4bc555ac'
+paperUrl: 'https://resolver.tudelft.nl/uuid:c8fbadda-4938-4022-a153-b95c4bc555ac'
 firstName: Razvan Marian
 lastName: Gherasa
 repositoryUrl: 'https://github.com/razvangherasa/LC-PFN-Noise-Extrapolation'
