--- a/content/posters/2025/Q4/Group 10/students/Sinan Başaran Karaarslan/student_info.yaml
+++ b/content/posters/2025/Q4/Group 10/students/Sinan Başaran Karaarslan/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Effectiveness of Machine Learning Models in Classifying Learners Based on Learning Curves
-paperUrl: 'https://repository.tudelft.nl/record/uuid:207f6693-f34c-4404-a309-e0bd35334981'
+paperUrl: 'https://resolver.tudelft.nl/uuid:207f6693-f34c-4404-a309-e0bd35334981'
 firstName: Sinan
 lastName: Başaran Karaarslan
 repositoryUrl: 'https://github.com/sinanbasaran/cse-3000'
