Add Group 68 files.

--- a/content/posters/2025/Q4/Group 68/students/Nazar Vasyliev/student_info.yaml
+++ b/content/posters/2025/Q4/Group 68/students/Nazar Vasyliev/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Voltage Control System for Liquid-Crystal Based Reconfigurable Inte
 paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
 firstName: Nazar
 lastName: Vasyliev
-repositoryUrl: ''
+repositoryUrl: 'https://github.com/BomberKomar/rp-lc-ris'
