Add Group 48 files.

--- a/content/posters/2025/Q4/Group 48/students/Kaloyan Yanchev/student_info.yaml
+++ b/content/posters/2025/Q4/Group 48/students/Kaloyan Yanchev/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Efficient Utilization of Local Optimization Methods and Strategies 
 paperUrl: ''
 firstName: Kaloyan
 lastName: Yanchev
-repositoryUrl: ''
+repositoryUrl: 'https://github.com/kyanchev26/CSE3000-Research-Project'
