--- a/content/posters/2025/Q4/Group 48/students/Emīls Dzintars/student_info.yaml
+++ b/content/posters/2025/Q4/Group 48/students/Emīls Dzintars/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Genetic Algorithms for Solving the Global Geometry Optimization Problem: Evaluating Initialization and Crossover Strategies for Lennard-Jones Cluster Optimization'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:86ebd6d7-89e3-41e8-8377-553c626ca1df'
 firstName: Emīls
 lastName: Dzintars
 repositoryUrl: ''
