--- a/content/posters/2025/Q2/Group 7/group_info.yaml
+++ b/content/posters/2025/Q2/Group 7/group_info.yaml
@@ -1,4 +1,4 @@
-projectTitle: What if fanfiction, but also coding: Investigating cultural differences in fanfiction writing and reviewing with machine learning methods
+projectTitle: 'What if fanfiction, but also coding: Investigating cultural differences in fanfiction writing and reviewing with machine learning methods'
 year: 2025
 supervisors:
   - Hayley Hung
