--- a/content/posters/2025/Q4/Group 63/students/Antonios Barotsis/student_info.yaml
+++ b/content/posters/2025/Q4/Group 63/students/Antonios Barotsis/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Property-Based Testing in Open-Source Rust Projects: A Case Study of the proptest Crate"
-paperUrl: ''
+paperUrl: "https://resolver.tudelft.nl/uuid:82f61962-e0b5-48d2-ada4-4c94aec06b02"
 firstName: Antonios
 lastName: Barotsis
-repositoryUrl: 'https://resolver.tudelft.nl/uuid:82f61962-e0b5-48d2-ada4-4c94aec06b02'
+repositoryUrl: "https://github.com/AntoniosBarotsis/proptest-dataset"
