--- a/content/posters/2025/Q4/Group 49/students/Wishaal Kanhai/student_info.yaml
+++ b/content/posters/2025/Q4/Group 49/students/Wishaal Kanhai/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'May the Delays Be Ever in Your Favor: Genetic Operators in Delay-Based Testing of the XRPL Consensus Algorithm'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:3c711cc0-81b4-4b98-854e-e2fd54569926'
 firstName: Wishaal
 lastName: Kanhai
-repositoryUrl: 'https://repository.tudelft.nl/record/uuid:3c711cc0-81b4-4b98-854e-e2fd54569926'
+repositoryUrl: ''
