add group 61 files

--- a/content/posters/2025/Q4/Group 61/students/E. L. S./student_info.yaml
+++ b/content/posters/2025/Q4/Group 61/students/E. L. S./student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Backdoor Attacks on 3D Gaze Estimation Models: When BadNets Meet Your Eyes: Data Poisoning in Deep Regression'
 paperUrl: 'https://resolver.tudelft.nl/uuid:000ca48d-b717-443b-9121-b4e403c70c85'
-firstName: Ezrah
-lastName: Ligthart Schenk
+firstName: E.
+lastName: L. S.
 repositoryUrl: ''
