Update Group 26 files

--- a/content/posters/2025/Q4/Group 26/students/Daniel Rachev/student_info.yaml
+++ b/content/posters/2025/Q4/Group 26/students/Daniel Rachev/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Analyzing the Impact of Documentation on Performance Metrics in Different Continuous Integration Open-Source Projects
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:63f14561-5ec6-4d68-a45e-c1895c5fe8ad'
 firstName: Daniel
 lastName: Rachev
 repositoryUrl: 'https://github.com/Zakrok09/CI-tool-du'
