--- a/content/posters/2025/Q4/Group 62/students/Ivan Moreno Sarries/student_info.yaml
+++ b/content/posters/2025/Q4/Group 62/students/Ivan Moreno Sarries/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: 'Privacy-Preserving Data Analytics: What are the financial costs associated with the use of Homomorphic Encryption for privacy-preserving data analytics'
-paperUrl: ''
+thesisTitle: 'Privacy-Preserving Data Analytics: What are the financial costs associated with the use of Homomorphic Encryption for privacy-preserving data analytics?'
+paperUrl: 'https://resolver.tudelft.nl/uuid:cdd6a65f-d6a2-40cb-a1b2-2550074d4f27'
 firstName: Ivan
 lastName: Moreno Sarries
 repositoryUrl: ''
