--- a/content/posters/2025/Q4/Group 62/students/Nicoleta Dobrică/student_info.yaml
+++ b/content/posters/2025/Q4/Group 62/students/Nicoleta Dobrică/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Quantum SMPC: Rich in theory, limited in practice: A systematic review of quantum secure multi-party computation'
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:1d4f00b1-a6b9-4497-98ef-2baa00d16316'
 firstName: Nicoleta
 lastName: Dobrică
 repositoryUrl: ''
