--- a/content/posters/2025/Q4/Group 53/students/Pablo Hendriks/student_info.yaml
+++ b/content/posters/2025/Q4/Group 53/students/Pablo Hendriks/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Revisiting Langevin Monte Carlo Applied to Deep Q-Learning: An Empirical Study of Robustness and Sensitivity'
-paperUrl: 'https://repository.tudelft.nl/search?search_term=Revisiting+Langevin+Monte+Carlo+Applied+to+Deep+Q-Learning&page=1&sort=relevance&record_type=bachelor_thesis'
+paperUrl: 'https://repository.tudelft.nl/record/uuid:43888331-6504-4ddd-a42b-bc2364fba09f'
 firstName: Pablo
 lastName: Hendriks
 repositoryUrl: 'https://github.com/PabloHendriks/AdamLMCDQN'
