Update Group 29 files

--- a/content/posters/2025/Q4/Group 29/students/Stefan Minkov/student_info.yaml
+++ b/content/posters/2025/Q4/Group 29/students/Stefan Minkov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Data Hound: Analyzing Boilerplate Code Data Smell on Large Code Datasets'
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:b14f61c3-6ba5-4c91-89b3-31186bc33256'
 firstName: Stefan
 lastName: Minkov
 repositoryUrl: 'https://github.com/jkatzy/ML4SE-toolkit/tree/main'
