--- a/content/posters/2025/Q4/Group 29/students/Boris Annink/student_info.yaml
+++ b/content/posters/2025/Q4/Group 29/students/Boris Annink/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Data Hound: Linking Educational Value to LLM Code Completion Performance During Inference'
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:6ba0830d-e846-43b5-95a5-743b3345e7a4'
 firstName: Boris
 lastName: Annink
 repositoryUrl: 'https://github.com/jkatzy/ML4SE-toolkit/tree/main'
