Update reference paper for Nazar and Oleh

--- a/content/posters/2025/Q4/Group 68/students/Nazar Vasyliev/student_info.yaml
+++ b/content/posters/2025/Q4/Group 68/students/Nazar Vasyliev/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Voltage Control System for Liquid-Crystal Based Reconfigurable Intelligent Surfaces
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://resolver.tudelft.nl/uuid:1782c290-ddc6-4527-938b-5ba3905d2f34'
 firstName: Nazar
 lastName: Vasyliev
 repositoryUrl: 'https://github.com/BomberKomar/rp-lc-ris'
