--- a/content/posters/2025/Q4/Group 68/students/Oleh Grypas/student_info.yaml
+++ b/content/posters/2025/Q4/Group 68/students/Oleh Grypas/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Investigation of Learning Robustness Techniques in WiFi Sensing Deep Learning Models
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://resolver.tudelft.nl/uuid:2f817bd4-7e93-4611-9374-49add0230437'
 firstName: Oleh
 lastName: Grypas
 repositoryUrl: ''
