Update Group 78 files.

--- a/content/posters/2025/Q4/Group 78/students/Vlad-Ștefan Popescu/student_info.yaml
+++ b/content/posters/2025/Q4/Group 78/students/Vlad-Ștefan Popescu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Computation Capabilities of Server-Side Trusted Execution Environments
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:0bf15c1a-d3b6-4bbd-a83d-7400db05692b'
 firstName: Vlad-Ștefan
 lastName: Popescu
 repositoryUrl: ''
