--- a/content/posters/2025/Q4/Group 3/students/Matthias van Vliet/student_info.yaml
+++ b/content/posters/2025/Q4/Group 3/students/Matthias van Vliet/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Explaining detectable precedences for the disjunctive constraint
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:5f3d2ca1-4c9a-4a26-a4a8-5c3cabb9fe3f'
 firstName: Matthias
 lastName: van Vliet
 repositoryUrl: 'https://github.com/MatvV04/Pumpkin'
