--- a/content/posters/2025/Q4/Group 35/students/Danny Bunschoten/student_info.yaml
+++ b/content/posters/2025/Q4/Group 35/students/Danny Bunschoten/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Linking Software Changes to Incident Reports
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:78d9705c-5eb1-4434-a0cd-8e780ed82481'
 firstName: Danny
 lastName: Bunschoten
 repositoryUrl: ''
