--- a/content/posters/2025/Q4/Group 35/students/Iulia-Maria Aldea/student_info.yaml
+++ b/content/posters/2025/Q4/Group 35/students/Iulia-Maria Aldea/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Understanding Software Failures Through Incident Report Analysis
-paperUrl: ""
+paperUrl: "https://repository.tudelft.nl/record/uuid:e8da60fe-3db0-4a02-ac2f-5c7b2859f7ee"
 firstName: Iulia-Maria
 lastName: Aldea
 repositoryUrl: ""
