--- a/content/posters/2025/Q4/Group 35/students/Jakub Rutkowski/student_info.yaml
+++ b/content/posters/2025/Q4/Group 35/students/Jakub Rutkowski/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Understanding IT System Failures: Primary Fault Types, Severity Patterns, and Evolution in Modern Operations"
-paperUrl: ""
+paperUrl: "https://repository.tudelft.nl/record/uuid:16aeee13-032e-4f40-8801-e02abccbf14c"
 firstName: Jakub
 lastName: Rutkowski
 repositoryUrl: ""
