Update Group 63 files.

--- a/content/posters/2025/Q4/Group 63/students/Max Derbenwick/student_info.yaml
+++ b/content/posters/2025/Q4/Group 63/students/Max Derbenwick/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Property-Based Testing in Rust, How is it Used?: A case study of the 'quickcheck' crate used in open source repositories"
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:67a66d2d-d5cb-4453-9b72-f243ba3d3aea'
 firstName: Max
 lastName: Derbenwick
 repositoryUrl: ''
