--- a/content/posters/2025/Q4/Group 63/students/Harald Toth/student_info.yaml
+++ b/content/posters/2025/Q4/Group 63/students/Harald Toth/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Property-Based Testing in the Wild!: Exploring Property-Based Testing in Java: An Analysis of jqwik Usage in Open-Source Repositories"
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:e00c77d1-a4e1-4aa2-82e2-0c1c61c2fb02'
 firstName: Harald
 lastName: Toth
 repositoryUrl: ''
