forgot sorin poster

--- a/content/posters/2025/Q4/Group 21/students/Hugo Koot/student_info.yaml
+++ b/content/posters/2025/Q4/Group 21/students/Hugo Koot/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Detecting Patient Deception and Adherence in Diabetes Support Using AI-Generated Conversation Summaries
-paperUrl: TODO
+paperUrl: https://resolver.tudelft.nl/uuid:2e93992f-baa2-439b-8d69-c1405bbe3af6
 firstName: Hugo
 lastName: Koot
 repositoryUrl: 'https://github.com/HugoKoot/CHIPsummary2.git'
