Update group 71 paper links.

--- a/content/posters/2025/Q4/Group 71/students/Kaldis Berzins/student_info.yaml
+++ b/content/posters/2025/Q4/Group 71/students/Kaldis Berzins/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Pixel Art Vectorization with\_Gradients"
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:59afd2a7-78f6-4859-8e5c-e6ddb508265d'
 firstName: Kaldis
 lastName: Berzins
 repositoryUrl: ''
