--- a/content/posters/2025/Q4/Group 71/students/Francisco Cunha/student_info.yaml
+++ b/content/posters/2025/Q4/Group 71/students/Francisco Cunha/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Procedural texturing for pixel art: Making pixel art resemble real materials'
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:0aeec69b-b3fd-445d-96ed-e45bc2596e69'
 firstName: Francisco
 lastName: Cunha
 repositoryUrl: 'https://github.com/franciscunha/pixel-art-texturing'
