Update Group 56 files.

--- a/content/posters/2025/Q4/Group 56/students/Alexia-Iustina Gavrilă/student_info.yaml
+++ b/content/posters/2025/Q4/Group 56/students/Alexia-Iustina Gavrilă/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Assessing the trustworthiness and real-world feasibility of machine learning models for conflict\_forecasting"
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:11cd14b9-f955-4245-bc64-82f143e8b570'
 firstName: Alexia-Iustina
 lastName: Gavrilă
 repositoryUrl: ''
