--- a/content/posters/2025/Q4/Group 56/students/Lia Petrova/student_info.yaml
+++ b/content/posters/2025/Q4/Group 56/students/Lia Petrova/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "How well can machine learning tools for humanitarian forecasting be used in predicting the consequences of forced\_displacement?"
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:24ac9413-1339-4492-a186-634f2e1a8291'
 firstName: Lia
 lastName: Petrova
 repositoryUrl: ''
