--- a/content/posters/2025/Q4/Group 56/students/Matej Bavec/student_info.yaml
+++ b/content/posters/2025/Q4/Group 56/students/Matej Bavec/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "What are the areas of improvement for data available for the development of disease outbreak forecasting\_ML\_models?"
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:aa4e6cdd-82a2-4e8e-8099-176b411c6ef3'
 firstName: Matej
 lastName: Bavec
 repositoryUrl: ''
