Add Group 48 files.

--- a/content/posters/2025/Q4/Group 48/students/Kaloyan Yanchev/student_info.yaml
+++ b/content/posters/2025/Q4/Group 48/students/Kaloyan Yanchev/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Efficient Utilization of Local Optimization Methods and Strategies in Local Search Genetic Algorithms for Lennard Jones Clusters
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:fc18e21b-79c9-47a3-95ab-bc824d30128b'
 firstName: Kaloyan
 lastName: Yanchev
 repositoryUrl: 'https://github.com/kyanchev26/CSE3000-Research-Project'
