Update Group 36 files.

--- a/content/posters/2025/Q4/Group 36/students/Ahmet Arif Özmen/student_info.yaml
+++ b/content/posters/2025/Q4/Group 36/students/Ahmet Arif Özmen/student_info.yaml
@@ -1,5 +1,4 @@
 thesisTitle: 'Analogies for Machine Learning Loss Functions: An Empirical Study on Understanding and Motivation'
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:d5252624-654c-4f76-8ebf-555845281c5d'
 firstName: Ahmet Arif
 lastName: Özmen
-repositoryUrl: ''
