--- a/content/posters/2025/Q4/Group 36/students/Mateo Nasse/student_info.yaml
+++ b/content/posters/2025/Q4/Group 36/students/Mateo Nasse/student_info.yaml
@@ -1,5 +1,4 @@
 thesisTitle: Domain Specificity in Supervised Machine Learning Analogies
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:5223a0d8-3d28-48ab-90c2-42ea00073314'
 firstName: Mateo
 lastName: Nasse
-repositoryUrl: ''
