--- a/content/posters/2025/Q4/Group 36/students/Thomas Koppelaar/student_info.yaml
+++ b/content/posters/2025/Q4/Group 36/students/Thomas Koppelaar/student_info.yaml
@@ -1,5 +1,4 @@
 thesisTitle: 'Teaching Gradient Descent Through Analogies, Step by Step'
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:c04ddaa8-abf5-4a42-8d69-833bc776c6b6'
 firstName: Thomas
 lastName: Koppelaar
-repositoryUrl: ''
