--- a/content/posters/2025/Q4/Group 36/students/Vincent Ruijgrok/student_info.yaml
+++ b/content/posters/2025/Q4/Group 36/students/Vincent Ruijgrok/student_info.yaml
@@ -1,5 +1,4 @@
 thesisTitle: How to Teach Unsupervised Machine Learning with Analogies
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:42983e6b-6af3-4f5f-97c4-7d98a46fa6e8'
 firstName: Vincent
 lastName: Ruijgrok
-repositoryUrl: ''
