--- a/content/posters/2025/Q4/Group 36/students/Maria Cristescu/student_info.yaml
+++ b/content/posters/2025/Q4/Group 36/students/Maria Cristescu/student_info.yaml
@@ -1,5 +1,4 @@
 thesisTitle: Conceptual Bridges in Machine Learning
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:37b9155d-9173-4e7b-bbaa-a6f95dcffc0e'
 firstName: Maria
 lastName: Cristescu
-repositoryUrl: ''
