Update Group 31 files.

--- a/content/posters/2025/Q4/Group 31/students/Sagar Chethan Kumar/student_info.yaml
+++ b/content/posters/2025/Q4/Group 31/students/Sagar Chethan Kumar/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Talking Like a Human: How Conversational Anthropomorphism Affects Self-Disclosure to Mental Health Chatbots'
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://resolver.tudelft.nl/uuid:7f80336c-9644-4aeb-bae1-c4e2e2664e09'
 firstName: Sagar
 lastName: Chethan Kumar
 repositoryUrl: ''
