--- a/content/posters/2025/Q4/Group 31/students/Manu Gautam/student_info.yaml
+++ b/content/posters/2025/Q4/Group 31/students/Manu Gautam/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Do Privacy Policies Matter? Investigating Self-Disclosure in Mental Health Chatbots
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://resolver.tudelft.nl/uuid:ba25cca0-076d-4436-959c-38abe97204e9'
 firstName: Manu
 lastName: Gautam
 repositoryUrl: ''
