--- a/content/posters/2025/Q4/Group 2/students/Saunaq Chakrabarty/student_info.yaml
+++ b/content/posters/2025/Q4/Group 2/students/Saunaq Chakrabarty/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Algorithm Selection with Continuous Feature Optimal Decision Trees
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:d8e24946-9e16-4be3-932e-d402a9a93773'
 firstName: Saunaq
 lastName: Chakrabarty
 repositoryUrl: ''
