Update Group 76 files.

--- a/content/posters/2025/Q4/Group 76/students/Luka Orbovic/student_info.yaml
+++ b/content/posters/2025/Q4/Group 76/students/Luka Orbovic/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Laughter Accelerometer-Based Detection in Natural Social Interactions
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://resolver.tudelft.nl/uuid:49bbf7c1-5432-4fc7-af47-0e539931967b'
 firstName: Luka
 lastName: Orbovic
 repositoryUrl: 'https://github.com/Gansovic/RP-Laughter-Drinking'
