--- a/content/posters/2025/Q4/Group 76/students/Vassil Guenov/student_info.yaml
+++ b/content/posters/2025/Q4/Group 76/students/Vassil Guenov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Laughter in Motion: Pose-Based Detection Across Annotation Modalities in Natural Social Interactions'
-paperUrl: 'https://repository.tudelft.nl/record/uuid:21df5a1e-036d-43e3-b7be-460ba3fd65af'
+paperUrl: 'https://resolver.tudelft.nl/uuid:21df5a1e-036d-43e3-b7be-460ba3fd65af'
 firstName: Vassil
 lastName: Guenov
 repositoryUrl: 'https://github.com/Gansovic/RP-Laughter-Drinking'
