--- a/content/posters/2025/Q4/Group 76/students/Thomas Baeten/student_info.yaml
+++ b/content/posters/2025/Q4/Group 76/students/Thomas Baeten/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Detecting Drinking Behavior in Social Settings Using Chest-Mounted Accelerometer Data
-paperUrl: 'https://repository.tudelft.nl/record/uuid:a528d15b-7be0-4a2c-9b67-0fb6c7a43ee0'
+paperUrl: 'https://resolver.tudelft.nl/uuid:a528d15b-7be0-4a2c-9b67-0fb6c7a43ee0'
 firstName: Thomas
 lastName: Baeten
 repositoryUrl: 'https://github.com/Gansovic/RP-Laughter-Drinking'
