Added paperUrl Sorin and Jochem

--- a/content/posters/2025/Q4/Group 21/students/Jochem van Paridon/student_info.yaml
+++ b/content/posters/2025/Q4/Group 21/students/Jochem van Paridon/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Detecting Patient Information Conflicts through Conflict Reasoning in Knowledge Graphs
-paperUrl: TODO
+paperUrl: 'https://resolver.tudelft.nl/uuid:3dc645c2-5787-46f4-9f1a-d47da36f2786'
 firstName: Jochem
 lastName: van Paridon
-repositoryUrl: https://github.com/JochemvanP/chip-conflict-detection
+repositoryUrl: 'https://github.com/JochemvanP/chip-conflict-detection'
