--- a/content/posters/2025/Q4/Group 21/students/Sorin-Andrei Ciuntu/student_info.yaml
+++ b/content/posters/2025/Q4/Group 21/students/Sorin-Andrei Ciuntu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Entropy-Based Modeling For Detecting Behavioral Anomalies in Users of a Diabetes Lifestyle Management Support System
-paperUrl: "TBD"
+paperUrl: 'https://resolver.tudelft.nl/uuid:3cbd29f6-a8ac-4ea9-9b86-1671c4b3af63'
 firstName: Sorin - Andrei
 lastName: Ciuntu
 repositoryUrl: "https://github.com/sorin-a-c/diabetes-anomaly-detection"
