--- a/content/posters/2025/Q4/Group 21/students/Marina Mădăraș/student_info.yaml
+++ b/content/posters/2025/Q4/Group 21/students/Marina Mădăraș/student_info.yaml
@@ -2,5 +2,5 @@ thesisTitle: To Deceive or Self-Deceive?
 paperUrl: 'https://resolver.tudelft.nl/uuid:6a18ca7c-92a8-49a6-9540-fb293e495733'
 firstName: Marina
 lastName: Mădăraș
-repositoryUrl: 'https://github.com/marinamadaras/CHIPxDeception
+repositoryUrl: 'https://github.com/marinamadaras/CHIPxDeception'
 '
