added the correct Github link for Job

--- a/content/posters/2025/Q4/Group 52/students/Job van Zwienen/student_info.yaml
+++ b/content/posters/2025/Q4/Group 52/students/Job van Zwienen/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Creating Robust Train Unit Shunting Plans using Probabilistic Progr
 paperUrl: 'https://resolver.tudelft.nl/uuid:1cc5d684-7f42-47b3-bbbf-042f73327473'
 firstName: Job
 lastName: van Zwienen
-repositoryUrl: 'https://doi.org/10.4121/b974f9f2-672c-44a6-aff8-04806d5f26e6'
+repositoryUrl: 'https://github.com/jobvanzwienen/bachelor-thesis'
