added the correct link paper for Matthijs

--- a/content/posters/2025/Q4/Group 52/students/Matthijs Bonke/student_info.yaml
+++ b/content/posters/2025/Q4/Group 52/students/Matthijs Bonke/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Creating robust plans for the Minecraft planner of the PDDL Gym library using Probablistisitic Inference
-paperUrl: 'https://www.overleaf.com/read/qjsckzqjsbxn#8b40b9'
+paperUrl: 'https://resolver.tudelft.nl/uuid:1efd4f53-573e-4579-9763-15d3b1da0926'
 firstName: Matthijs
 lastName: Bonke
 repositoryUrl: ''
