--- a/content/posters/2025/Q4/Group 49/students/Bryan Wassenaar/student_info.yaml
+++ b/content/posters/2025/Q4/Group 49/students/Bryan Wassenaar/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Groot: Impact of Evolutionary Operators in XRPL Testing using Priority-Based Event Representation'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:12c5fa91-34ff-4d08-8fd0-4b2a4f7a8ef4'
 firstName: Bryan
 lastName: Wassenaar
 repositoryUrl: ''
