Update Group 78 files.

--- a/content/posters/2025/Q4/Group 78/students/Sergiu-Nicolae Stancu/student_info.yaml
+++ b/content/posters/2025/Q4/Group 78/students/Sergiu-Nicolae Stancu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A Comparative Study of Privacy-Preserving Computation Techniques
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:723382ba-8d25-431b-a9ed-60f6a6463621'
 firstName: Sergiu-Nicolae
 lastName: Stancu
 repositoryUrl: ''
