Update Group 75 files.

--- a/content/posters/2025/Q4/Group 75/students/Yair Chizi/student_info.yaml
+++ b/content/posters/2025/Q4/Group 75/students/Yair Chizi/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Subspace Learning with Gaussian Processes for Sparse Contextual Bandits
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:1655fa0b-d94f-4cea-be87-b864a1f9f8f7'
 firstName: Yair
 lastName: Chizi
 repositoryUrl: 'https://github.com/Cheese-1/SparseSequentialLearning'
