group 69 paper links

--- a/content/posters/2025/Q4/Group 69/students/Urte Urbonavičiūtė/student_info.yaml
+++ b/content/posters/2025/Q4/Group 69/students/Urte Urbonavičiūtė/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Exploring Alternatives to Full Neuron Reset for Maintaining Plasticity in Continual Backpropagation
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:c44ea405-fb2e-421a-a7f4-649d7dac0cbf'
 firstName: Urte
 lastName: Urbonavičiūtė
 repositoryUrl: ''
