--- a/content/posters/2025/Q4/Group 69/students/Justinas Jučas/student_info.yaml
+++ b/content/posters/2025/Q4/Group 69/students/Justinas Jučas/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Evaluating Catastrophic Forgetting in Neural Networks Trained with Continual Backpropagation
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:f164c62d-ef06-4630-a7dc-7b8495c2cb25'
 firstName: Justinas
 lastName: Jučas
 repositoryUrl: ''
