Update Group 47 files

--- a/content/posters/2025/Q4/Group 47/students/Marina Serafeimidi/student_info.yaml
+++ b/content/posters/2025/Q4/Group 47/students/Marina Serafeimidi/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Explainable Fact-Checking with Large Language Models
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:ba8adb8c-c1de-4a58-825f-2af915fe033c'
 firstName: Marina
 lastName: Serafeimidi
 repositoryUrl: ''
