--- a/content/posters/2025/Q4/Group 36/students/Daniel Popovici/student_info.yaml
+++ b/content/posters/2025/Q4/Group 36/students/Daniel Popovici/student_info.yaml
@@ -1,4 +1,4 @@
 thesisTitle: 'The impact of model learning losses on the sample efficiency of MuZero in Atari'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:2f5727a3-8fef-498f-884e-369ff49f95d3'
 firstName: Daniel
 lastName: Popovici
