--- a/content/posters/2025/Q4/Group 36/students/Vaclav Kubon/student_info.yaml
+++ b/content/posters/2025/Q4/Group 36/students/Vaclav Kubon/student_info.yaml
@@ -1,4 +1,4 @@
 thesisTitle: 'Action Sampling Strategies in Sampled MuZero for Continuous Control: A JAX-Based Implementation with Evaluation of Sampling Distributions and Progressive Widening'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:964311c3-49af-4f30-b2f7-823b78c05cd1'
 firstName: Vaclav
 lastName: Kuboň
