add group 61 files

--- a/content/posters/2025/Q4/Group 61/students/Petra Gulyás/student_info.yaml
+++ b/content/posters/2025/Q4/Group 61/students/Petra Gulyás/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Manipulating Head Pose Estimation Models: Exploring Deep Regression Models’ Vulnerability to Full Image Backdoor Attacks'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:267ab20a-e58e-47aa-a38f-c48f53e4c6ba'
 firstName: Petra
 lastName: Gulyás
 repositoryUrl: ''
