Add Group 30 files.

--- a/content/posters/2025/Q4/Group 30/students/Lovre Mlikotić/student_info.yaml
+++ b/content/posters/2025/Q4/Group 30/students/Lovre Mlikotić/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Can We Use Physical Characteristics of Genes to Predict Age-Related Changes in Expression?
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:a4ed7c04-9808-4344-97b8-0980fe67ea79'
 firstName: Lovre
 lastName: Mlikotić
 repositoryUrl: ''
