--- a/content/posters/2025/Q4/Group 42/students/Ignacio Barral/student_info.yaml
+++ b/content/posters/2025/Q4/Group 42/students/Ignacio Barral/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Relational Deep Learning with Graph Transformers: Exploring Local and Global Message Passing"
 paperUrl: 'https://resolver.tudelft.nl/uuid:2de0b902-d2d7-45ed-83d3-5b162abda4ef'
 firstName: Ignacio 
-lastName: Barral
+lastName: Cuñado Barral
 repositoryUrl: 'https://github.com/ignaciocunado/gt-rdl'
