Update Group 55 files.

--- a/content/posters/2025/Q4/Group 55/students/Mara Mih/student_info.yaml
+++ b/content/posters/2025/Q4/Group 55/students/Mara Mih/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Surveying the Usage of Learning-Related Information in Adaptation for Intelligent Systems
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:2f787f56-60cc-40f9-9087-111bfb381350'
 firstName: Mara
 lastName: Mih
 repositoryUrl: ''
