--- a/content/posters/2025/Q4/Group 27/students/Cristian Benghe/student_info.yaml
+++ b/content/posters/2025/Q4/Group 27/students/Cristian Benghe/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Capturing the Spatiotemporal Dynamics of LEO ISP Performance
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:f1844014-a047-4645-884e-9076823f6fee'
 firstName: Cristian
 lastName: Benghe
 repositoryUrl: 'https://github.com/TUD-BScResearchProject-6079/leo-viewer'
