added the correct link code for Matthijs

--- a/content/posters/2025/Q4/Group 52/students/Matthijs Bonke/student_info.yaml
+++ b/content/posters/2025/Q4/Group 52/students/Matthijs Bonke/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Creating robust plans for the Minecraft planner of the PDDL Gym lib
 paperUrl: 'https://resolver.tudelft.nl/uuid:1efd4f53-573e-4579-9763-15d3b1da0926'
 firstName: Matthijs
 lastName: Bonke
-repositoryUrl: ''
+repositoryUrl: 'https://github.com/MatthijsBonke/Bachelor-Thesis'
