Update Group 45 paper url

--- a/content/posters/2025/Q4/Group 45/students/Jiayi Wang/student_info.yaml
+++ b/content/posters/2025/Q4/Group 45/students/Jiayi Wang/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Evaluating established denoising methods for voltage imaging: Comparison of SUPPORT, DeepCAD-RT, and PMD when applied to voltage imaging data'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:36176d93-2309-4c43-ac4f-17f74be7172e'
 firstName: Jiayi
 lastName: Wang
 repositoryUrl: ''
