--- a/content/posters/2025/Q4/Group 45/students/Ioan Leolea/student_info.yaml
+++ b/content/posters/2025/Q4/Group 45/students/Ioan Leolea/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Benchmarking Self-supervised Learning for Denoising Voltage\_Imaging\_Data"
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:297d56fe-dec4-4abc-b319-201537d38ff0'
 firstName: Ioan
 lastName: Leolea
 repositoryUrl: ''
