--- a/content/posters/2025/Q4/Group 45/students/Jan Willem Eriks/student_info.yaml
+++ b/content/posters/2025/Q4/Group 45/students/Jan Willem Eriks/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Comparing deep learning and traditional denoising methods for voltage imaging
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:a31ff2cf-fc71-4f0a-ae5e-59e916745708'
 firstName: Jan Willem
 lastName: Eriks
 repositoryUrl: 'https://github.com/JanDeDinoMan/Research-Project'
