--- a/content/posters/2025/Q4/Group 53/students/Bora Goral/student_info.yaml
+++ b/content/posters/2025/Q4/Group 53/students/Bora Goral/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Modeling decision making in cognitive architectures
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:b8d1f23e-854b-41b5-8ba8-aa3a6c6d7824'
 firstName: Bora
 lastName: Goral
 repositoryUrl: ''
