Update VerleeLoykens info

--- a/content/posters/2025/Q4/Group 53/students/Veerle Loykens/student_info.yaml
+++ b/content/posters/2025/Q4/Group 53/students/Veerle Loykens/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'ACT-R in the military: a systematic review'
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:3b61f529-9d70-4c80-8d69-15cb629d2983'
 firstName: Veerle
 lastName: Loykens
 repositoryUrl: ''
