--- a/content/posters/2025/Q4/Group 53/students/Wojciech Hajdas/student_info.yaml
+++ b/content/posters/2025/Q4/Group 53/students/Wojciech Hajdas/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: How suited are cognitive architectures for implementing moral reasoning? – a Systematic Literature Review
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:ccb9d439-71f2-4d02-bba4-47a10aa5505f'
 firstName: Wojciech
 lastName: Hajdas
 repositoryUrl: ''
